--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>AnimationEXE</title>
   </head>
   <body>
     <div class="animation">
-      <div class="car"></div>
+      <div class="car">
+        <img style="height: 10vh; width: 10vw" src="src/car.png" />
+      </div>
+      <div class="tree"><img src="src/tree.png" /></div>
+      <div class="grass">
+        <img style="height: 5vh; width: 3vw" src="src/grass.png" />
+      </div>
+      <div class="mountain">
+        <img style="height: 60vh; width: auto" src="src/mountains.png" />
+      </div>
+      <div class="guy">
+        <img
+          style="height: 5vh; width: auto"
+          src="https://cdn.pixabay.com/photo/2014/04/02/10/54/man-304880__480.png"
+        />
+      </div>
     </div>
-    >
   </body>
 </html>
